--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-permission": "^6.9"
+        "spatie/laravel-medialibrary": "^11.9",
+        "spatie/laravel-permission": "^6.9",
+        "staudenmeir/laravel-adjacency-list": "^1.20"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
